# mpwall

./: Cargo.toml  LICENSE  PLANNING.md  README.md
documentation/: README.md  architecture.md  configuration.md  contributing.md  development-workflow.md  getting-started.md
documentation/features/: enable-disable.md  list.md  multi-monitor.md  set.md  status.md  stop.md  tui.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/core/: config.rs  process.rs  state.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
src/tui/panels/: browser.rs  settings.rs
tests/: integration_tests.rs
